Fix notification schemas
