# backend/openapi.yml
@@ -238,7 +238,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/PushNotificationSubscription'
+              $ref: '#/components/schemas/PushNotificationSubscriptionCreate'
       responses:
         201:
           description: Created
@@ -583,6 +583,16 @@ components:
       required:
         - pagination
         - subscriptions
+    PushNotificationSubscriptionCreate:
+      type: object
+      properties:
+        name:
+          type: string
+        subscription:
+          $ref: '#/components/schemas/RawSubscription'
+      required:
+        - name
+        - subscription
     PushNotificationSubscriptionPartialUpdate:
       type: object
       properties:
@@ -599,17 +609,8 @@ components:
           type: string
         keys:
           type: object
-          properties:
-            auth:
-              type: string
-            p256dh:
-              type: string
-          required:
-            - auth
-            - p256dh
-      required:
-        - endpoint
-        - keys
+          additionalProperties:
+            type: string
     PushNotificationSubscription:
       type: object
       properties:
